# api/school/v1/teacher.pb.validate.go
@@ -799,6 +799,40 @@ func (m *Teacher) validate(all bool) error {
 		}
 	}
 
+	for idx, item := range m.GetBooks() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, TeacherValidationError{
+						field:  fmt.Sprintf("Books[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, TeacherValidationError{
+						field:  fmt.Sprintf("Books[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return TeacherValidationError{
+					field:  fmt.Sprintf("Books[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
 	// no validation rules for CreatedAt
 
 	// no validation rules for UpdatedAt
@@ -2472,3 +2506,107 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = JobValidationError{}
+
+// Validate checks the field values on Book with the rules defined in the proto
+// definition for this message. If any rules are violated, the first error
+// encountered is returned, or nil if there are no violations.
+func (m *Book) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on Book with the rules defined in the
+// proto definition for this message. If any rules are violated, the result is
+// a list of violation errors wrapped in BookMultiError, or nil if none found.
+func (m *Book) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *Book) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for FileId
+
+	// no validation rules for FileName
+
+	// no validation rules for FileSize
+
+	if len(errors) > 0 {
+		return BookMultiError(errors)
+	}
+
+	return nil
+}
+
+// BookMultiError is an error wrapping multiple validation errors returned by
+// Book.ValidateAll() if the designated constraints aren't met.
+type BookMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m BookMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m BookMultiError) AllErrors() []error { return m }
+
+// BookValidationError is the validation error returned by Book.Validate if the
+// designated constraints aren't met.
+type BookValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e BookValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e BookValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e BookValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e BookValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e BookValidationError) ErrorName() string { return "BookValidationError" }
+
+// Error satisfies the builtin error interface
+func (e BookValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sBook.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = BookValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = BookValidationError{}
